converted to mongo database.  changed path/segment/note data objects to work with mongo locations.  removed notes from segments.