@@ -3,6 +3,7 @@ package com.trailbook.kole.data;
 import android.util.Log;
 
 import com.google.android.gms.maps.model.LatLng;
+import com.trailbook.kole.data.geo.GeoLineString;
 import com.trailbook.kole.helpers.TrailbookPathUtilities;
 
 import java.util.ArrayList;
@@ -13,14 +14,12 @@ import java.util.HashMap;
  * Created by kole on 8/18/2014.
  */
 public class PathSegment {
-    String segmentId;
-    ArrayList<LatLng> points;
-    HashMap<String, PointAttachedObject<Note>> pointNotes;
+    String _id;
+    GeoLineString points;
 
     public PathSegment(String id) {
-        points = new ArrayList<LatLng>();
-        pointNotes = new HashMap<String, PointAttachedObject<Note>>();
-        this.segmentId = id;
+        points = new GeoLineString();
+        this._id = id;
     }
 
     public void addPoint(LatLng newPoint) {
@@ -29,36 +28,14 @@ public class PathSegment {
         if (points.size() < 1){
             points.add(newPoint);
         }else{
-            LatLng last = points.get(points.size() - 1);
+            LatLng last = points.getLast();
             float delta = TrailbookPathUtilities.getDistanceInMeters(last, newPoint);
             if (delta > 200) {
-                Log.d("trailbook", "segmentId: " + segmentId + " dist: " + String.valueOf(delta) + " index: " + points.size());
+                Log.d("trailbook", "segmentId: " + _id + " dist: " + String.valueOf(delta) + " index: " + points.size());
             }
             if (delta>Constants.MIN_DISTANCE_BETWEEN_POINTS && delta < Constants.MAX_DISTANCE_BETWEEN_POINTS)
                 points.add(newPoint);
         }
-    }
-
-    public void addNote(String noteId, PointAttachedObject<Note> paoNote) {
-        pointNotes.put(noteId, paoNote);
-    }
-
-    public Note getNoteFromId(String noteId) {
-        PointAttachedObject<Note> paoNote = pointNotes.get(noteId);
-        if (paoNote != null) {
-            return (Note)paoNote.getAttachment();
-        }
-
-        return null;
-    }
-
-    public ArrayList<Note> getNotes() {
-        ArrayList<Note> notes = new ArrayList<Note>();
-        Collection<PointAttachedObject<Note>> paoNotes = getPointNotes().values();
-        for (PointAttachedObject<Note> paoNote : paoNotes) {
-            notes.add(paoNote.getAttachment());
-        }
-        return notes;
     }
 
     public void addPoints(ArrayList<LatLng> newPoints) {
@@ -66,30 +43,19 @@ public class PathSegment {
     }
 
     public ArrayList<LatLng> getPoints() {
-        return points;
-    }
-
-    public void addPointNote(PointAttachedObject<Note> paoNote) {
-        this.pointNotes.put(paoNote.getAttachment().getNoteID(), paoNote);
-    }
-
-    public HashMap<String,PointAttachedObject<Note>> getPointNotes() {
-        return pointNotes;
+        return points.toLatLngArray();
     }
 
     public String getId() {
-        return segmentId;
+        return _id;
     }
 
     public void removePoints() {
-        points = new ArrayList<LatLng>();
+        points = new GeoLineString();
     }
 
-    public void setNotes(HashMap<String, PointAttachedObject<Note>> notes) {
-        this.pointNotes = notes;
-    }
-
-    public void setPoints(ArrayList<LatLng> points) {
-        this.points = points;
+    public void setPoints(ArrayList<LatLng> newPoints) {
+        removePoints();
+        points.addAll(newPoints);
     }
 }
